<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <ImageButton
                android:id="@+id/profile_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_arrow_back_24"
                android:background="@drawable/box"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="20dp" />

            <TextView
                android:id="@+id/profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="110dp"
                android:layout_marginTop="11dp"
                android:textSize="25dp"
                android:text="@string/profile"
                android:fontFamily="sans-serif-condensed-medium"
                android:textColor="@color/black"/>

            <ImageButton
                android:id="@+id/infoBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_info_24"
                android:background="@drawable/box"
                android:layout_marginLeft="90dp"
                android:layout_marginTop="15dp" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/bg1"/>

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="-250dp"
                    android:layout_gravity="center"
                    android:src="@drawable/bg2" />

                <LinearLayout
                    android:layout_width="350dp"
                    android:layout_height="150dp"
                    android:background="@drawable/profile_linearlayout_style"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:elevation="25dp">

                    <TextView
                        android:id="@+id/profile_emailTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:textSize="25dp"
                        android:layout_gravity="center"
                        android:textColor="@color/black"
                        android:text="@string/profile_emailTitle"/>

                    <TextView
                        android:id="@+id/profile_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:layout_gravity="center"
                        android:textSize="25dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:padding="10dp"
                    android:orientation="horizontal"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:background="@drawable/profile_linearlayout_style2">

                    <ImageView
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/user"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="15dp"
                        android:textSize="20dp"
                        android:text="@string/profile_user"/>

                    <ImageView
                        android:layout_width="28dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:layout_marginLeft="192dp"
                        android:src="@drawable/next"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/profile_linearlayout_style2"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/settings" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="15dp"
                        android:text="@string/action_settings"
                        android:textSize="20dp" />

                    <ImageView
                        android:layout_width="28dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="240dp"
                        android:layout_marginTop="3dp"
                        android:src="@drawable/next" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="40dp">
                    <Button
                        android:id="@+id/logout"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_gravity="center"
                        android:text="@string/profile_logout"
                        android:textColor="@color/white"
                        android:textSize="20dp"
                        android:background="@drawable/profile_linearlayout_style3"
                        android:onClick="logout"/>
                </LinearLayout>



            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</RelativeLayout>